--- a/assignment33/2.ipynb
+++ b/assignment33/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,18 +40,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "16\n",
+      "[[12 -1  1 -1]\n",
+      " [ 3 -1  2  0]\n",
+      " [-1 -1 -1  1]\n",
+      " [ 5  1  4  0]\n",
+      " [-1 -1 -1  3]\n",
+      " [ 7  3  6  0]\n",
+      " [-1 -1 -1  5]\n",
+      " [ 9  5  8  0]\n",
+      " [-1 -1 -1  7]\n",
+      " [11  7 10  0]\n",
+      " [-1 -1 -1  9]\n",
+      " [-1  9 -1  0]\n",
+      " [-1  0 13 -1]\n",
+      " [14 -1 -1 12]\n",
+      " [-1 13 15 12]\n",
+      " [-1 -1 -1 14]]\n"
+     ]
+    }
+   ],
    "source": [
     "img_two = cv2.imread (\"inputs\\input_2_2D.png\")\n",
     "two_gray = cv2.cvtColor (img_two , cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "_ , two_thresh = cv2.threshold (one_gray , 120 , 255 , cv2.THRESH_BINARY)\n",
+    "_ , two_thresh = cv2.threshold (two_gray , 120 , 255 , cv2.THRESH_BINARY)\n",
+    "contours , hierarchy = cv2.findContours (two_thresh , cv2.RETR_TREE , cv2.CHAIN_APPROX_SIMPLE)\n",
+    "print (len (contours))\n",
+    "print (len (hierarchy[0]))\n",
+    "# for contour in contours :\n",
+    "    # if \n",
+    "    # x , y , w , h = cv2.boundingRect (contour)\n",
+    "    # cv2.rectangle (img_two , (x , y) , (x + w , y + h) , (255 , 0 , 0) , 3)\n",
     "\n",
-    "plt.axis (\"off\")\n",
-    "plt.imshow (two_thresh , cmap = \"gray\")\n",
-    "plt.show ()"
+    "# plt.axis (\"off\")\n",
+    "print (hierarchy[0])\n",
+    "# plt.imshow (img_two , cmap = \"gray\")\n",
+    "# plt.show ()"
    ]
   },
   {
