--- a/assignment33/2.ipynb
+++ b/assignment33/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,8 @@
     "plt.axis (\"off\")\n",
     "plt.imshow (img_two , cmap = \"gray\")\n",
     "plt.show ()\n",
-    "print (dices_number_2)"
+    "print (dices_number_2)\n",
+    "plt.imsave (\"outputs\\output_2_2D.jpg\" , img_two)"
    ]
   },
   {
@@ -107,8 +108,10 @@
    "source": [
     "img_three = cv2.imread (\"inputs\\input_2_3D.png\")\n",
     "three_gray = cv2.cvtColor (img_three , cv2.COLOR_BGR2GRAY)\n",
+    "dices_number_3 = []\n",
     "\n",
     "_ , three_thresh = cv2.threshold (three_gray , 120 , 255 , cv2.THRESH_BINARY)\n",
+    "\n",
     "\n",
     "plt.axis (\"off\")\n",
     "plt.imshow (three_thresh , cmap = \"gray\")\n",
