--- a/assignment33/2.ipynb
+++ b/assignment33/2.ipynb
@@ -67,20 +67,19 @@
     "dices_number_2 = []\n",
     "\n",
     "_ , two_thresh = cv2.threshold (two_gray , 120 , 255 , cv2.THRESH_BINARY)\n",
-    "contours , hierarchy = cv2.findContours (two_thresh , cv2.RETR_TREE , cv2.CHAIN_APPROX_SIMPLE)\n",
-    "for i in range (len(hierarchy[0])) :\n",
-    "    if hierarchy[0][i][3] == -1 :\n",
-    "        x , y , w , h = cv2.boundingRect (contours[i])\n",
+    "contours_2 , hierarchy_2 = cv2.findContours (two_thresh , cv2.RETR_TREE , cv2.CHAIN_APPROX_SIMPLE)\n",
+    "for i in range (len(hierarchy_2[0])) :\n",
+    "    if hierarchy_2[0][i][3] == -1 :\n",
+    "        x , y , w , h = cv2.boundingRect (contours_2[i])\n",
     "        cv2.rectangle (img_two , (x , y) , (x + w , y + h) , (0 , 0 , 255) , 3)\n",
     "        n = 0\n",
-    "        for j in range (len (hierarchy[0])) :\n",
-    "            if hierarchy[0][j][3] == i :\n",
-    "                if cv2.contourArea (contours[j]) > 100 :\n",
-    "                    x , y , w , h = cv2.boundingRect (contours[j])\n",
+    "        for j in range (len (hierarchy_2[0])) :\n",
+    "            if hierarchy_2[0][j][3] == i :\n",
+    "                if cv2.contourArea (contours_2[j]) > 100 :\n",
+    "                    x , y , w , h = cv2.boundingRect (contours_2[j])\n",
     "                    cv2.rectangle (img_two , (x , y) , (x + w , y + h) , (125 , 0 , 125) , 3)\n",
     "                    n += 1\n",
     "        dices_number_2.append (n)\n",
-    "\n",
     "\n",
     "plt.axis (\"off\")\n",
     "plt.imshow (img_two , cmap = \"gray\")\n",
@@ -111,6 +110,9 @@
     "dices_number_3 = []\n",
     "\n",
     "_ , three_thresh = cv2.threshold (three_gray , 120 , 255 , cv2.THRESH_BINARY)\n",
+    "contours_3 , hierarchy_3 = cv2.findContours (three_thresh , cv2.RETR_TREE , cv2.CHAIN_APPROX_SIMPLE)\n",
+    "for\n",
+    "\n",
     "\n",
     "\n",
     "plt.axis (\"off\")\n",
