--- a/assignment33/2.ipynb
+++ b/assignment33/2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
     "plt.axis (\"off\")\n",
     "plt.imshow (img_one , cmap = \"gray\")\n",
     "plt.show ()\n",
-    "# plt.imsave (\"outputs\\output_2_1D.jpg\" , img_one)\n",
+    "plt.imsave (\"outputs\\output_2_1D.jpg\" , img_one)\n",
     "print (dices_number_1)"
    ]
   },
