--- a/assignment35/4.ipynb
+++ b/assignment35/4.ipynb
@@ -2,37 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from PIL import Image"
+    "from PIL import Image , ImageFont , ImageDraw\n",
+    "import arabic_reshaper\n",
+    "from bidi.algorithm import get_display\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open (\"inputs\\input_4_puppy.jpg\")\n",
+    "img = Image.open (\"inputs\\input_4_friends.jpg\")\n",
     "img.show ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "drw = ImageDraw.Draw (img)\n",
+    "fnt = ImageFont.truetype (\"IRKamran.ttf\" , 90)\n",
+    "\n",
+    "txt = \"بی نظیر\"\n",
+    "reshape_txt = arabic_reshaper.reshape (txt)\n",
+    "show_txt = get_display (reshape_txt)\n",
+    "\n",
+    "drw.text ((200 , 200) , show_txt , fill = (99 , 100 , 230) , font = fnt)\n",
+    "img.show ()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r , g , "
+   ]
   },
   {
    "cell_type": "code",
