--- a/assignment35/4.ipynb
+++ b/assignment35/4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -68,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "equaliz_img = ImageOps.equalize (img , None)\n",
-    "equaliz_img.show ()"
+    "img_equaliz = ImageOps.equalize (img , None)\n",
+    "img_equaliz.show ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -109,10 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "img_gray_equalize = ImageOps.equalize (img_gray , None)\n",
+    "img_gray_equalize.show ()"
+   ]
   }
  ],
  "metadata": {
