--- a/assignment35/4.ipynb
+++ b/assignment35/4.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -100,11 +100,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "plt.plot (img_gray.histogram () , color = \"black\")\n",
-    "plt.show ()"
+    "plt.show ()\n",
+    "plt.savefig (\"outputs\\output_5_gray_histogram.jpg\")"
    ]
   },
   {
