--- a/assignment35/4.ipynb
+++ b/assignment35/4.ipynb
@@ -83,7 +83,8 @@
    "outputs": [],
    "source": [
     "img_gray = img.convert (\"L\")\n",
-    "img_gray.show ()"
+    "img_gray.show ()\n",
+    "img_gray.save (\"outputs\\output_5_gray_img.jpg\")"
    ]
   },
   {
