--- a/assignment35/4.ipynb
+++ b/assignment35/4.ipynb
@@ -73,12 +73,13 @@
    "outputs": [],
    "source": [
     "img_equaliz = ImageOps.equalize (img , None)\n",
-    "img_equaliz.show ()"
+    "img_equaliz.show ()\n",
+    "img_equaliz.save (\"outputs\\output_5_equalized.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
