--- a/assignment35/4.ipynb
+++ b/assignment35/4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,8 @@
     "show_txt = get_display (reshape_txt)\n",
     "\n",
     "drw.text ((200 , 200) , show_txt , fill = (99 , 100 , 230) , font = fnt)\n",
-    "img_txt.show ()\n"
+    "img_txt.show ()\n",
+    "img_txt.save (\"outputs\\output_5_persian_text.jpg\")"
    ]
   },
   {
